[package]
name = "lms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
ycl = { git = "https://github.com/brooks-builds/ycl", rev = "3b63f1c" }
# ycl = { path = "../ycl/" }
yew-router = "0.17.0"
gloo = "0.8.0"
graphql_client = "0.12.0"
serde = { version = "1.0.152", features = ["derive"] }
yewdux = "0.9.0"
dotenvy_macro = "0.15.1"
dotenvy = "0.15.6"
yew-hooks = "0.2.0"
thiserror = "1.0.38"
rand = "0.8.5"
getrandom = { version = "0.2.8", features = ["js"] }
web-sys = { version = "0.3.61", features = ["HtmlDocument", "FormData", "Location", "Window"] }
wasm-bindgen = "0.2.84"
stylist = { version = "0.12.0", features = ["yew"] }
url = "2.3.1"
wasm-bindgen-futures = "0.4.34"
eyre = "0.6.8"
js-sys = "0.3.64"

[profile.dev.package.wasm-bindgen]
debug-assertions = false
